# dark-life

./: .dockerignore  .env  .env.example  .env.sample  .gitignore  AGENTS.md  DEPLOY.md  Makefile  README.md  alembic.ini  cron_upload.py  fix_ingest.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  run_pipeline.py  sample.env  token_gen.py
.github/workflows/: ci.yml  renderer-smoke.yml  static.yml
apps/api/: .dockerignore  .env.sample  Dockerfile  admin_render_jobs.py  admin_settings.py  admin_stories.py  db.py  insights.py  jobs.py  main.py  media_refs.py  models.py  openapi.json  pipeline.py  public_artifacts.py  publish_jobs.py  publishing.py  reddit_admin.py  refinement.py  render.py  render_jobs.py  requirements.txt  script_refinement.py  stories.py  story_duplicates.py  uploads.py
apps/web/: .env.sample  Dockerfile  README.md  eslint.config.mjs  index.html  package.json  playwright.config.ts  server.mjs  tsconfig.json  (+3 more)
dashboard/: index.html
docs/: env.md  manual-testing-runbook.md  renderer-runbook.md  renderer_runbooks.md
infra/: docker-compose.yml
scripts/: __init__.py  create_slideshow.py  create_video.py  fetch_reddit.py  fetch_visuals.py  generate_subtitles.py  generate_voiceover.py  smoke_e2e.py  update_dashboard.py
services/: __init__.py
shared/: config.py  logging.py  reddit.py  types.py  workflow.py  youtube_oauth.py
tasks/: 001.Environment-and-Secrets-Consistency.md  002.API-Job-Endpoints-Design-and-Implementation.md  003.Renderer-Worker-API-Polling-Refactor.md  004.TTS-Integration-ElevenLabs.md  005.Whisper-Subtitles-Generation.md  006.Music-Selection-and-Mixdown.md  007.FFmpeg-Command-Safety-and-Atomic-Output.md  008.Logging-JSON-and-Heartbeats.md  009.Temp-and-Disk-Hygiene-Healthchecks.md  01-fetch-reddit.md  010.Docker-Compose-Polish.md  011.Ingestion-Idempotency-and-Backoff.md  012.Story-Splitting-Validation.md  013.Web-Server-Only-Proxy-No-Client-Secrets.md  014.CI-Smoke-Tests-Render-AV-Integrity.md  015.Docs-and-Runbooks.md  016.Self-Hosted-TTS-Voicebox.md  017.Advanced-VO-Auto-Mix-and-VST-Host-Evaluation.md  02_generate_voiceover_task.md  03_generate_subtitles_task.md  04_create_video_task.md  05_dashboard_task.md  README.md
tests/: conftest.py  test_backoff_schedule.py  test_create_slideshow.py  test_publisher_poller.py  test_publisher_youtube.py  test_queue_story.py  test_renderer_poller.py  test_stories_api.py  test_story_part_utils.py  test_webapp.py  test_whisper_subs.py
video_renderer/: create_slideshow.py  render_job_runner.py  voiceover.py  whisper_subs.py
video_uploader/: cron_upload.py  upload_to_instagram.py  upload_to_tiktok.py  upload_youtube.py
webapp/: main.py
website/: index.html
(+216 files in other folders)
