[project]
name = "dark-life"
version = "0.1.0"
description = "Automation for dark storytelling video pipeline"
authors = [{name = "AutoGen", email = "autogen@example.com"}]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "praw",
    "requests",
    "typer",
    "pydub",
    "jinja2",
]

[project.scripts]
fetch-reddit = "scripts.fetch_reddit:app"
generate-voiceover = "scripts.generate_voiceover:app"
generate-subtitles = "scripts.generate_subtitles:app"
create-video = "scripts.create_video:app"
update-dashboard = "scripts.update_dashboard:app"
run-pipeline = "run_pipeline:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = true
