[project]
name = "dark-life"
version = "0.1.0"
description = "Automation for dark storytelling video pipeline"
authors = [{name = "AutoGen", email = "autogen@example.com"}]
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "flask",
    "praw",
    "requests",
    "typer",
    "pydub",
    "jinja2",
    "python-frontmatter",
    "python-dotenv",
    "instagrapi",
    "pywhatkit",
    "yt-dlp",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "fastapi",
    "sqlmodel",
    "psycopg2-binary",
    "faster-whisper",
    "google-api-python-client",
    "google-auth-oauthlib",
]

[project.scripts]
webapp = "webapp.main:cli"
render-jobs = "video_renderer.render_job_runner:app"
upload-videos = "video_uploader.cron_upload:app"

[tool.setuptools]
packages = [
    "shared",
    "webapp",
    "video_renderer",
    "video_uploader",
    "apps.api",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = true
